--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 certifi==2019.9.11
 chardet==3.0.4
 Django==2.1.13
+django-redis==4.10.0
 idna==2.8
+Pillow==6.2.1
 PyMySQL==0.9.3
 pytz==2019.3
+redis==3.3.11
 requests==2.22.0
 urllib3==1.25.6
